--- a/basic-coding.html
+++ b/basic-coding.html
@@ -901,7 +901,7 @@ console.log(keepMaxTime);
 
 </script>
 
-<script id="ch0105/x25" type="x">
+<script id="ch0105/25" type="x">
   for (var i = 100; i < 999 ; i ++) {
     var a7 = i % 7
     var b7 = (i - a7) / 7 % 7
@@ -975,7 +975,7 @@ for (var i = 0 ; i < String(n).length; i ++) {
 console.log(result);
 </script>
 
-<script id="ch01015/x29" type="x">
+<script id="ch01015/29" type="x">
 var n = Number(prompt())
 var result = 0
 do {
