--- a/basic-coding.html
+++ b/basic-coding.html
@@ -957,7 +957,7 @@ console.log(keepMaxTime);
   console.log(count + 1);
 </script>
 
-<script id="ch0105/28" type="x">
+<script id="ch0105/28" type="">
 // var n = Number(prompt())
 // var calculate_mod = 10
 // var calculate_except = 1
@@ -974,11 +974,17 @@ console.log(keepMaxTime);
 // console.log(result);
 var n = +prompt()
 var result = ""
-debugger
+var i = 0
 do {
   var d = n % 10
   n = (n - d) / 10
-  result += d + " "
+
+  if (i == 0) {
+    result = d
+  } else {
+    result += " " + d
+  }
+  i++
 } while (n > 0)
   console.log(result);
 
