--- a/basic-coding.html
+++ b/basic-coding.html
@@ -989,7 +989,7 @@ do {
 
 </script>
 
-<script id="ch01015/29" type="">
+<script id="ch01015/29" type="x">
 var n = +prompt()
 var result = 0
 do {
