--- a/basic-coding.html
+++ b/basic-coding.html
@@ -1031,22 +1031,28 @@ if (m % 19 == 0 ) {
 }
 </script>
 
-<script id="ch0105/31" type="x">
-  var n =  Number(prompt())
-  var m = Number(prompt())
-  for (var i = 0; i < n ; i++) {
-    var flag = true
-    for (var p = 1;p <=m  p <= i;p++) {
-      if (i % p ==0 ) {
-        flag = !flag
+<script id="ch0105/31" type="">
+  var n = +prompt()
+  var m = +prompt()
+  var result = ""
+  for (var i = 1; i <= n ; i ++) {
+    var lamp = true
+    for (var p = 1 ;p <= m; p++) {
+      if (i % p == 0 ) {
+        lamp = !lamp
       }
     }
-    if (flag == false) {
-      result += "," + i
-      console.log(i);
+    if (lamp == false) {
+      if ( i ==1) {
+        result = i
+      } else {
+        result = result + "," + i
+      }
 
     }
   }
+  console.log(result);
+
 </script>
 
 <script id="ch0105/34" type="x">
