--- a/basic-coding.html
+++ b/basic-coding.html
@@ -1055,7 +1055,7 @@ if (m % 19 == 0 ) {
   console.log(result);
 </script>
 
-<script id="ch0105/32" type="">
+<script id="ch0105/32" type="x">
   var n = +prompt()
   var q = 2
   var p = 1
@@ -1065,9 +1065,23 @@ if (m % 19 == 0 ) {
     p = q
   }
   console.log(sum.toFixed(4));
+</script>
 
+<script charset="0105/33" type="x">
+  var n = +prompt()
+  var sum = 0
+  debugger
+  for (var i = 1; i <= n; i++) {
+    if (i % 2 == 0) {
+      sum = sum + (- (1 / i))
+    } else {
+      sum = sum + (1 / i)
+    }
+  }
+  console.log(sum.toFixed(4));
 
 </script>
+
 
 <script id="ch0105/34" type="x">
   var n = Number(prompt())
