--- a/basic-coding.html
+++ b/basic-coding.html
@@ -1067,7 +1067,7 @@ if (m % 19 == 0 ) {
   console.log(sum.toFixed(4));
 </script>
 
-<script charset="0105/33" type="x">
+<script charset="ch0105/33" type="x">
   var n = +prompt()
   var sum = 0
   debugger
