--- a/basic-coding.html
+++ b/basic-coding.html
@@ -1067,7 +1067,7 @@ if (m % 19 == 0 ) {
   console.log(sum.toFixed(4));
 </script>
 
-<script charset="ch0105/33" type="x">
+<script id="ch0105/33" type="x">
   var n = +prompt()
   var sum = 0
   debugger
@@ -1112,10 +1112,9 @@ if (m % 19 == 0 ) {
 <script id="ch0105/36" type="x">
   var x = Number(prompt())
   var n = Number(prompt())
-  var CurrentResult = 0
-  var total = 0
-  while (n > 1) {
-    for (var i = 0;)
+  var sum = 0
+  for (var i = 1; i < n ; i++) {
+    sum += x +
   }
 
 </script>
