--- a/basic-coding.html
+++ b/basic-coding.html
@@ -1111,10 +1111,16 @@ if (m % 19 == 0 ) {
 <script id="ch0105/36" type="x">
   var x = Number(prompt())
   var n = Number(prompt())
-  var sum = 0
-  for (var i = 1; i < n ; i++) {
-    sum += x +
+  var a =1
+  var result = 1
+  for (var i = 1; i <=n ; i++) {
+    a *= x
+    result += a
   }
+  console.log(result.toFixed(2));
+</script>
+
+<script id="ch0105/27" type="">
 
 </script>
 <script id="ch0105/45" type="x">
