--- a/basic-coding.html
+++ b/basic-coding.html
@@ -1180,7 +1180,23 @@ if (m % 19 == 0 ) {
   console.log(count);
 </script>
 
-<script id="ch0105/42" type=""></script>
+<script id="ch0105/42" type="x">
+
+</script>
+
+<script id="ch0105/43" type="x">
+  var n = +prompt()
+  var max = 2
+  for (var i = 2 ; i < n ; i++) {
+    if (n % i == 0 ) {
+      if (max < i){
+        max = i
+      }
+    }
+  }
+  console.log(max);
+
+</script>
 
 <script id="ch0105/45" type="x">
   var n = Number(prompt())
