--- a/basic-coding.html
+++ b/basic-coding.html
@@ -1195,7 +1195,28 @@ if (m % 19 == 0 ) {
     }
   }
   console.log(max);
+</script>
 
+<script id="ch0105/44" type="x">
+  var n = +prompt()
+  var count = 0
+  var isPrime
+  for (var i = 2; ; i ++) {
+    isPrime = true
+    for (var j = 2 ; j <= i / 2 ; j++) {
+      if (i % j == 0) {
+        isPrime = false
+        break
+      }
+    }
+    if (isPrime) {
+      count++
+      if (count == n ) {
+        console.log(i);
+        break
+      }
+    }
+  }
 </script>
 
 <script id="ch0105/45" type="x">
