--- a/basic-coding.html
+++ b/basic-coding.html
@@ -1255,7 +1255,32 @@ if (m % 19 == 0 ) {
       }
     }
   console.log(result);
+</script>
 
+<script id="sort" type="x">
+  var a = +prompt()
+  var b = +prompt()
+  var c = +prompt()
+  var temp
+  debugger
+  if (a > b) {
+    temp = a
+    a = b
+    b = temp
+  }
+  if (b > c) {
+    temp = b
+    b = c
+    c = temp
+  }
+  if (a > b) {
+    temp = a
+    a = b
+    b = temp
+  }
+  console.log(a);
+  console.log(b);
+  console.log(c);
 </script>
 <script id="2-20-1" type="x">
   var str = ""
